--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@cd-z/epub-constructor",
-  "version": "3.0.0",
+  "name": "@himojuku/epub-constructor",
+  "version": "1.0.0",
   "description": "This is a react library that creates an epub structure. This library only provides the file structure. To get a valid epub file it is needed to to create files from the provided data and compress them to a epub file.",
   "main": "index.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/CD-Z/Epub-Constructor.git"
+    "url": "https://github.com/HimoJuku/Epub-Constructor.git"
   },
   "bugs": {
-    "url": "https://github.com/CD-Z/Epub-Constructor/issues"
+    "url": "https://github.com/HimoJuku/Epub-Constructor/issues"
   },
-  "homepage": "https://github.com/CD-Z/Epub-Constructor",
+  "homepage": "https://github.com/HimoJuku/Epub-Constructor#readme",
   "keywords": [
     "epub",
     "react",
@@ -20,14 +20,14 @@
   "dependencies": {
     "sanitize-html": "^2.13.0"
   },
-  "author": "Alen Toma & Patrick Loser",
+  "author": "Alen Toma & Patrick Loser & HimoJuku",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "bun-types": "^1.1.4",
+    "bun-types": "^1.2.10",
     "eslint": "^8.42.0",
     "typescript": "^5.1.3"
   }
